postfix/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${POSTFIX_NAMESPACE}
  labels:
    koeppster.net/aws_enabled: "true"
