postfix/manifests/postfix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfix
  namespace: ${POSTFIX_NAMESPACE}
spec:
  selector:
    app.kubernetes.io/name: postfix
  ports:
    - name: smtp
      port: 25
      targetPort: smtp
      protocol: TCP
