postfix/manifests/postfix-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postfix-smtp
  namespace: ${POSTFIX_NAMESPACE}
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: smtp
  rules:
    - backendRefs:
        - name: postfix
          port: 25
